2012-02-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/err.c (GRUB_MAX_ERRMSG): Move to ...
	* include/grub/err.h (GRUB_MAX_ERRMSG): ... here.
	* include/grub/err.h (grub_error_saved): New struct.
	(grub_errmsg): Make array size explicit.
	* include/grub/misc.h (grub_error_save): New function.
	(grub_error_load): Likewise.
	* grub-core/kern/err.c (grub_error_stack_items): Use grub_error_saved.
	(grub_error_push): Update `errno' member name.
	(grub_error_pop): Likewise
	* grub-core/net/tftp.c (tftp_data): New member save_err.
	(tftp_receive): Save error.
	(tftp_open): Restore error.

2012-02-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/i386/relocator16.S (grub_relocator16_start): Move switch
	to real mode down to execute A20-related code in protected mode as
	intended.

2012-02-05  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* grub-core/disk/diskfilter.c (grub_diskfilter_make_raid): Return
	NULL when the argument `level' has an unexpected value.

2012-02-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Move platform-dependent files from $prefix to $prefix/$platform.

	* config.h.in (GRUB_TARGET_CPU): New definition.
	(GRUB_PLATFORM): Likewise.
	* configure.ac: Define GRUB_TARGET_CPU and GRUB_PLATFORM.
	* grub-core/commands/parttool.c (grub_cmd_parttool): Update dir.
	* grub-core/efiemu/main.c (grub_efiemu_autocore): Likewise.
	* grub-core/kern/dl.c (grub_dl_load): Likewise.
	* grub-core/normal/autofs.c (read_fs_list): Likewise.
	* grub-core/normal/crypto.c (read_crypto_list): Likewise.
	* grub-core/normal/dyncmd.c (read_command_list): Likewise.
	* grub-core/normal/term.c (read_terminal_list): Likewise.
	* grub-core/gettext/gettext.c (grub_mofile_open_lang): Use
	$prefix/locale.
	(grub_gettext_init_ext): Likewise.
	* grub-core/normal/main.c (GRUB_MOD_INIT): Define grub_cpu and
	grub_platform.
	* util/grub-install.in: Update directories.
	* util/grub-mknetdir.in: Likewise.
	* util/grub-mkrescue.in: Likewise.
